# asset-creator

./: .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
data/shapes/: arrow.shape.ron  color_test.shape.ron  cornered_cube.shape.ron  csg_intersect.shape.ron  csg_subtract.shape.ron  csg_union.shape.ron  diagonal_mirror_test.shape.ron  directional_cube.shape.ron  disk.shape.ron  experiment.shape.ron  frz-b.shape.ron  melee.shape.ron  mirror_test.shape.ron  orientation_test.shape.ron  primitives_bowl.shape.ron  primitives_box.shape.ron  primitives_cap.shape.ron  primitives_cone.shape.ron  primitives_corner.shape.ron  primitives_cylinder.shape.ron  primitives_dome.shape.ron  primitives_inverse_corner.shape.ron  primitives_sphere.shape.ron  primitives_torus.shape.ron  primitives_wedge.shape.ron  scout_bot.shape.ron  sphere3.shape.ron  sphere4.shape.ron  sphere_approx.shape.ron  (+2 more)
docs/: ai-postmortem-composition-model.md  architecture.md  composition-model.md  csg-normals.md  decal-editor.md  noise-functions.md  object-editor.md  render-export.md  ron-format.md  runtime-collision-detection.md  sdf-primitives.md  surface-editor.md  tileset-editor.md  world-editor.md
examples/: aabb_fit_visualization.rs  camera_debug.rs  csg_closure.rs  egui_active_camera.rs  egui_inactive_camera.rs  egui_no_camera.rs  fidget_csg.rs  lab_colors.rs  migrate_shapes.rs  multi_camera_layering.rs  orient_debug.rs  png_info.rs  projection_debug.rs  render_timing.rs  zoom_debug.rs
src/: logging.rs  main.rs  render_export.rs  stress_test.rs  util.rs
tools/: Cargo.toml
(+50 files in other folders)
